@@ -1,6 +1,8 @@
 2008-04-18  Piotr Fusik  <fox@scene.pl>
 * win32/gui.rc: don't require Windows SDK for building XBMC plugin
 
+* win32/Makefile, INSTALL: compile XBMC plugin with VC 2003
+
 
 2008-04-12  Piotr Fusik  <fox@scene.pl>
 * asapscan.c, acpu.c: asapscan wasn't compilable
